--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,23 +1,23 @@
 .navbar {
     display: flex;
     justify-content: center;
-    background-color: black;
+    background-color: rgb(246, 240, 249);
     padding: 10px;
 }
 
 .navbar a {
-    color: gold;
+    color: black;
     text-decoration: none;
     padding: 5px 10px;
-    border-radius: 25px;
+    border-radius: 10px;
     margin: 0px 10px;
 }
 
 .navbar a:hover {
-    background-color: #ddd;
+    background-color: white;
 }
 
 .navbar a.active {
-    background-color: darkgoldenrod;
+    background-color: purple;
     color: white;
 }
